--- a/style.css
+++ b/style.css
@@ -9,3 +9,16 @@ body{
     height: 100vh;
     background: linear-gradient(135deg, #8052ec, #d161ff);
 }
+.container{
+    border: 2px solid white;
+    width: 40%;
+    min-width: 450px;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    padding: 30px 40px;
+}
+#newtask{
+    
+}
